Assignment/objects/CostAndFee__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CostAndFee</label>
    <fields>
        <fullName>ATMFee__c</fullName>
        <label>ATMFee</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CardReplaceFee__c</fullName>
        <label>CardReplaceFee</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostPerMonth__c</fullName>
        <label>CostPerMonth</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>ProductType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>